# This file is a open-sourced version of internal BUILD file for closure base.
# They are too different to attempt a copybara transform between them.
# This file is used in the closure-library repo by external Bazel users (via rules_closure)

load("@io_bazel_rules_closure//closure/compiler:closure_base_js_library.bzl", "closure_base_js_library")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

package(default_visibility = ["//visibility:public"])

closure_base_js_library(
    name = "base",
    srcs = [
        "base.clutz.d.ts",
        "base.js",
    ],
    visibility = ["//visibility:public"],
)

closure_js_library(
    name = "goog",
    srcs = [
        "goog.clutz.d.ts",
        "goog.js",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["deps.js"])
